--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/node": "22.10.1",
     "@types/react": "18.3.12",
     "eslint": "9.16.0",
     "eslint-config-next": "15.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "typescript": "5.7.2"
   }
 }
