--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "test-coverage": "jest --collect-coverage"
   },
   "dependencies": {
     "next": "^15.0.3",
