--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
+    "test": "jest --verbose",
     "test-coverage": "jest --collect-coverage"
   },
   "dependencies": {
